--- a/src/components/imageList.css
+++ b/src/components/imageList.css
@@ -9,3 +9,13 @@
     width:250px;
     
 }
+
+.imageList img:hover{
+    transform: scale(1.2);
+    
+}
+
+.imageList img:hover .cardBox{
+
+    padding: 0.8em;
+}
